cmake_minimum_required(VERSION 3.10.2)
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_executable(10008 10008.cc)
add_executable(10034 10034.cc)
add_executable(10048 10048.cc)
add_executable(10300 10300.cc)
add_executable(10369 10369.cc)
add_executable(10370 10370.cc)
add_executable(10600 10600.cc)
add_executable(10696 10696.cc)
add_executable(10783 10783.cc)
add_executable(108 108.cc)
add_executable(11228 11228.cc)
add_executable(11234 11234.cc)
add_executable(11332 11332.cc)
add_executable(11547 11547.cc)
add_executable(11631 11631.cc)
add_executable(11710 11710.cc)
add_executable(11733 11733.cc)
add_executable(1174 1174.cc)
add_executable(11747 11747.cc)
add_executable(11831 11831.cc)
add_executable(11857 11857.cc)
add_executable(11906 11906.cc)
add_executable(1208 1208.cc)
add_executable(1235 1235.cc)
add_executable(458 458.cc)
add_executable(908 908.cc)
